[gd_scene load_steps=3 format=3 uid="uid://b7py0xk1rp6f8"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_tp04a"]

[sub_resource type="SystemFont" id="SystemFont_qyqq1"]
font_names = PackedStringArray("Monospace")

[node name="MainMenu" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tp04a")

[node name="Control" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_qyqq1")
theme_override_font_sizes/font_size = 39
text = "Wizard Type Tower"
horizontal_alignment = 1

[node name="Control2" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Start" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Settings" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Control3" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control2" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Quit" to="." method="_on_Quit_pressed"]
